home section and header is done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="home" id="home">
             <div class="leftsection">
                 <h3>Hi, I am <span>Al</span>aqrabawy</h3>
-                <h1>web developer <span>&</span> designer</h1>
+                <h1>web developer <br> <span>&</span> designer</h1>
                 <p>I am dedicated to assisting emerging businesses in enhancing their products through the development of innovative, user-friendly, <br> and visually engaging interfaces.</p>
                 <div class="button-link">
                     <a href="#connect" class="calltoaction" id="action">Contact Me</a>
@@ -30,13 +30,23 @@
             </div>
             <img src="./asset/images/orange-shadow.svg" alt="shadow">
             <div class="rightsection">
-                <img src="./asset/images/Ellipse 2.svg" alt="">
+                <img src="./asset/images/figma-logo.svg" alt="figma logo" srcset="./asset/images/figma-logo.svg" id="figma-logo">
+                <img src="./asset/images/html-logo.svg" alt="html logo" srcset="./asset/images/html-logo.svg" id="html-logo">
+                <img src="./asset/images/node-logo.svg" alt="node js logo" srcset="./asset/images/node-logo.svg"  id="node-logo">
+                <img src="./asset/images/icons8-css-logo.svg" alt="css logo" srcset="./asset/images/icons8-css-logo.svg"  id="css-logo">
+                <img src="./asset/images/baner.svg" alt="baner">
                 <img src="./asset/images/charckter.svg" alt="char" id="rashed">
             </div>
         </section>
+        
+        <div class="skills" id="skills">
+            <h2 class="title"><span>M</span>y Skills</h2>
+            <div class="container" id="skills-container"></div>
+        </div>
+
     </main>
     <footer class="footer">
-
+        <a  href="https://icons8.com/icon/zfHRZ6i1Wg0U/figma">Figma</a> icon by <a  href="https://icons8.com" >Icons8</a>
     </footer>
     
    <script type="module" src="./asset/js/main.js"></script>
