--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
     <main class="main">
         <header class="header">
-            <a href="index.html" class="logo">
+            <a href="index.html" class="logo" title="main website">
                 <span>R</span>ashed.
             </a>
             <nav class="navbar" id="navbar"></nav>
             <a class="downloadcv" href="./documentation.md" download><i class="fa-solid fa-file-arrow-down"></i> <div>download resume</div></a>
         </header>
-        <section class="home" id="home">
+        <section class="home section" id="home">
             <div class="leftsection">
                 <h3>Hi, I am <span>Al</span>aqrabawy</h3>
-                <h1>web developer <br> <span>&</span> designer</h1>
+                <h1>Full-stack web developer <br> <span>&</span> designer</h1>
                 <p>I am dedicated to assisting emerging businesses in enhancing their products through the development of innovative, user-friendly, <br> and visually engaging interfaces.</p>
                 <div class="button-link">
                     <a href="#connect" class="calltoaction" id="action">Contact Me</a>
@@ -38,11 +38,32 @@
                 <img src="./asset/images/charckter.svg" alt="char" id="rashed">
             </div>
         </section>
-        
-        <div class="skills" id="skills">
-            <h2 class="title"><span>M</span>y Skills</h2>
-            <div class="container" id="skills-container"></div>
-        </div>
+
+        <section class="skills" id="skills">
+            <!-- <img src="./asset/images/skills-shadow.svg" alt="skills-shadow" id="skills-shadow"> -->
+            <div class="title">
+                <h2 class="h2-content">
+                    <span>
+                        My
+                    </span>
+                    skills
+                </h2>
+            </div>
+            <div class="container" id="skills-container">    
+            </div>
+        </section>
+
+        <section class="experiance" id="experiance">
+            <div class="title">
+                <h2 class="h2-content">
+                    <span>
+                        My
+                    </span>
+                    Experiance
+                </h2>
+            </div>
+
+        </section>
 
     </main>
     <footer class="footer">
