--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="asset/css/style.css">
     <link rel="shortcut icon" href="asset/images/charckter.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>front - end</title>
 </head>
 <body>
@@ -52,7 +53,6 @@
             <div class="container" id="skills-container">    
             </div>
         </section>
-
         <section class="experiance" id="experiance">
             <div class="title">
                 <h2 class="h2-content">
@@ -62,6 +62,9 @@
                     Experiance
                 </h2>
             </div>
+            <div class="experiance-container" id="experiance-container">
+
+            </div>
 
         </section>
 
@@ -70,6 +73,7 @@
         <a  href="https://icons8.com/icon/zfHRZ6i1Wg0U/figma">Figma</a> icon by <a  href="https://icons8.com" >Icons8</a>
     </footer>
     
-   <script type="module" src="./asset/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script type="module" src="./asset/js/main.js"></script>
 </body>
 </html>
